assignments/PA3/cool.output
Terminals unused in grammar

   ERROR
   ID


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | class_list error ';'

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    7 feature_list: %empty
    8             | feature_list feature ';'
    9             | feature_list ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID '(' ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expr

   14 formal_list: formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 expr_list: expr_list ',' expr
   18          | expr

   19 expr_list2: expr ';'
   20           | expr_list2 expr ';'
   21           | expr_list2 error ';'

   22 let: OBJECTID ':' TYPEID IN expr
   23    | OBJECTID ':' TYPEID ASSIGN expr IN expr
   24    | OBJECTID ':' TYPEID ',' let
   25    | OBJECTID ':' TYPEID ASSIGN expr ',' let
   26    | error ',' let

   27 branch_list: OBJECTID ':' TYPEID DARROW expr ';'
   28            | OBJECTID ':' TYPEID DARROW expr ';' branch_list

   29 expr: OBJECTID ASSIGN expr
   30     | expr '.' OBJECTID '(' ')'
   31     | expr '.' OBJECTID '(' expr_list ')'
   32     | expr '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   34     | OBJECTID '(' expr_list ')'
   35     | IF expr THEN expr ELSE expr FI
   36     | WHILE expr LOOP expr POOL
   37     | '{' expr_list2 '}'
   38     | LET let
   39     | CASE expr OF branch_list ESAC
   40     | NEW TYPEID
   41     | ISVOID expr
   42     | expr '+' expr
   43     | expr '-' expr
   44     | expr '*' expr
   45     | expr '/' expr
   46     | '~' expr
   47     | expr '<' expr
   48     | expr LE expr
   49     | expr '=' expr
   50     | NOT expr
   51     | '(' expr ')'
   52     | OBJECTID
   53     | INT_CONST
   54     | STR_CONST
   55     | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 11 30 31 32 33 34 51
')' (41) 10 11 30 31 32 33 34 51
'*' (42) 44
'+' (43) 42
',' (44) 15 17 24 25 26
'-' (45) 43
'.' (46) 30 31 32 33
'/' (47) 45
':' (58) 10 11 12 13 16 22 23 24 25 27 28
';' (59) 4 5 6 8 9 19 20 21 27 28
'<' (60) 47
'=' (61) 49
'@' (64) 32 33
'{' (123) 5 6 10 11 37
'}' (125) 5 6 10 11 37
'~' (126) 46
error (256) 4 21 26
CLASS (258) 5 6
ELSE (259) 35
FI (260) 35
IF (261) 35
IN (262) 22 23
INHERITS (263) 6
LET (264) 38
LOOP (265) 36
POOL (266) 36
THEN (267) 35
WHILE (268) 36
CASE (269) 39
ESAC (270) 39
OF (271) 39
DARROW (272) 27 28
NEW (273) 40
ISVOID (274) 41
STR_CONST (275) 54
INT_CONST (276) 53
BOOL_CONST (277) 55
TYPEID (278) 5 6 10 11 12 13 16 22 23 24 25 27 28 32 33 40
OBJECTID (279) 10 11 12 13 16 22 23 24 25 27 28 29 30 31 32 33 34 52
ASSIGN (280) 13 23 25 29
NOT (281) 50
LE (282) 48
ERROR (283)
ID (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3 4, on right: 1 3 4
class (49)
    on left: 5 6, on right: 2 3
feature_list (50)
    on left: 7 8 9, on right: 5 6 8 9
feature (51)
    on left: 10 11 12 13, on right: 8
formal_list (52)
    on left: 14 15, on right: 10 15
formal (53)
    on left: 16, on right: 14 15
expr_list (54)
    on left: 17 18, on right: 17 31 33 34
expr_list2 (55)
    on left: 19 20 21, on right: 20 21 37
let (56)
    on left: 22 23 24 25 26, on right: 24 25 26 38
branch_list (57)
    on left: 27 28, on right: 28 39
expr (58)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 51 52 53 54 55, on right: 10 11 13 17 18 19 20 22 23
    25 27 28 29 30 31 32 33 35 36 39 41 42 43 44 45 46 47 48 49 50
    51


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class
    4           | class_list . error ';'

    error  shift, and go to state 7
    CLASS  shift, and go to state 1

    $end  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 6

    0 $accept: program $end .

    $default  accept


State 7

    4 class_list: class_list error . ';'

    ';'  shift, and go to state 11


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 10

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


State 11

    4 class_list: class_list error ';' .

    $default  reduce using rule 4 (class_list)


State 12

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature ';'
    9             | feature_list . ';'

    OBJECTID  shift, and go to state 15
    ';'       shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


State 15

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . '(' ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 16

    9 feature_list: feature_list ';' .

    $default  reduce using rule 9 (feature_list)


State 17

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 22


State 18

    8 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 23


State 19

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature ';'
    9             | feature_list . ';'

    OBJECTID  shift, and go to state 15
    ';'       shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID '(' . ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 25
    ')'       shift, and go to state 26

    formal_list  go to state 27
    formal       go to state 28


State 21

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 29


State 22

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 23

    8 feature_list: feature_list feature ';' .

    $default  reduce using rule 8 (feature_list)


State 24

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 30


State 25

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 26

   11 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 32


State 27

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 28

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


State 29

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 12 (feature)


State 30

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 31

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


State 32

   11 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 37


State 33

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 38


State 34

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 39


State 35

   13 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 54


State 36

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 37

   11 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 55


State 38

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 56


State 39

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


State 40

   35 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 57


State 41

   38 expr: LET . let

    error     shift, and go to state 58
    OBJECTID  shift, and go to state 59

    let  go to state 60


State 42

   36 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 61


State 43

   39 expr: CASE . expr OF branch_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 62


State 44

   40 expr: NEW . TYPEID

    TYPEID  shift, and go to state 63


State 45

   41 expr: ISVOID . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 64


State 46

   54 expr: STR_CONST .

    $default  reduce using rule 54 (expr)


State 47

   53 expr: INT_CONST .

    $default  reduce using rule 53 (expr)


State 48

   55 expr: BOOL_CONST .

    $default  reduce using rule 55 (expr)


State 49

   29 expr: OBJECTID . ASSIGN expr
   34     | OBJECTID . '(' expr_list ')'
   52     | OBJECTID .

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 52 (expr)


State 50

   50 expr: NOT . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 67


State 51

   46 expr: '~' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 68


State 52

   37 expr: '{' . expr_list2 '}'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr_list2  go to state 69
    expr        go to state 70


State 53

   51 expr: '(' . expr ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 71


State 54

   13 feature: OBJECTID ':' TYPEID ASSIGN expr .
   30 expr: expr . '.' OBJECTID '(' ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   47     | expr . '<' expr
   48     | expr . LE expr
   49     | expr . '=' expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 13 (feature)


State 55

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 81


State 56

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 82


State 57

   30 expr: expr . '.' OBJECTID '(' ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   35     | IF expr . THEN expr ELSE expr FI
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   47     | expr . '<' expr
   48     | expr . LE expr
   49     | expr . '=' expr

    THEN  shift, and go to state 83
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 58

   26 let: error . ',' let

    ','  shift, and go to state 84


State 59

   22 let: OBJECTID . ':' TYPEID IN expr
   23    | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   24    | OBJECTID . ':' TYPEID ',' let
   25    | OBJECTID . ':' TYPEID ASSIGN expr ',' let

    ':'  shift, and go to state 85


State 60

   38 expr: LET let .

    $default  reduce using rule 38 (expr)


State 61

   30 expr: expr . '.' OBJECTID '(' ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   36     | WHILE expr . LOOP expr POOL
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   47     | expr . '<' expr
   48     | expr . LE expr
   49     | expr . '=' expr

    LOOP  shift, and go to state 86
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 62

   30 expr: expr . '.' OBJECTID '(' ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   39     | CASE expr . OF branch_list ESAC
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   47     | expr . '<' expr
   48     | expr . LE expr
   49     | expr . '=' expr

    OF   shift, and go to state 87
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


State 63

   40 expr: NEW TYPEID .

    $default  reduce using rule 40 (expr)


State 64

   30 expr: expr . '.' OBJECTID '(' ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   41     | ISVOID expr .
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   47     | expr . '<' expr
   48     | expr . LE expr
   49     | expr . '=' expr

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 41 (expr)


State 65

   29 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 88


State 66

   34 expr: OBJECTID '(' . expr_list ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr_list  go to state 89
    expr       go to state 90


State 67
